# Aind.Behavior.VrForaging.Curricula

./: 404.html  README.md  build.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: cicd.yml  docs.yml  vr-foraging-curricula.yml
curricula_diagrams/depletion/: index.html
curricula_diagrams/depletion_stops_offset/: index.html
curricula_diagrams/depletion_stops_rate/: index.html
curricula_diagrams/operant_conditioning/: index.html
curricula_diagrams/replenishment_depletion_offset/: index.html
curricula_diagrams/single_site_matching/: index.html
curricula_diagrams/template/: index.html
docs/: _render_curricula.py
schema/: depletion.json  depletion_stops_offset.json  depletion_stops_rate.json  operant_conditioning.json  replenishment_depletion_offset.json  single_site_matching.json  single_site_no_matching.json  template.json
search/: search_index.json
src/aind_behavior_vr_foraging_curricula/: __init__.py  _schema.py  cli.py
src/aind_behavior_vr_foraging_curricula/depletion/: curriculum.py  helpers.py  metrics.py  policies.py  stages.py
src/aind_behavior_vr_foraging_curricula/depletion_stops_offset/: curriculum.py  stages.py
src/aind_behavior_vr_foraging_curricula/depletion_stops_rate/: curriculum.py  stages.py
src/aind_behavior_vr_foraging_curricula/operant_conditioning/: curriculum.py  stages.py
src/aind_behavior_vr_foraging_curricula/replenishment_depletion_offset/: curriculum.py  policies.py  stages.py  utils.py
src/aind_behavior_vr_foraging_curricula/single_site_matching/: curriculum.py  metrics.py  policies.py  stages.py
src/aind_behavior_vr_foraging_curricula/single_site_no_matching/: curriculum.py  metrics.py  policies.py  stages.py
src/aind_behavior_vr_foraging_curricula/template/: __init__.py  __main__.py  curriculum.py  stages.py
tests/: __init__.py  conftest.py  test_cli.py
tests/depletion/: test_curriculum.py
tests/exponential_depletion/: test_curriculum.py
tests/operant_conditioning/: __init__.py  test_stages.py
tests/single_site_matching/: test_curriculum.py
tests/single_site_no_matching/: test_curriculum.py
tests/template/: test_cli.py
