[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-behavior-vr-foraging-curricula"
description = "A library of curricula for the VrForaging task."
authors = [ {name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org"}]
license = "MIT"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["readme"]

dependencies = [
    "aind-behavior-vr-foraging[data] @ git+https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.git@v0.6.0rc4",
    "aind-behavior-curriculum",
    "pydantic-settings",
]

[project.optional-dependencies]

dev = [
    'ruff',
    'pytest',
    'pytest-cov',
    'codespell',
]

docs = [
    'mkdocs',
    'mkdocs-material',
    'mkdocstrings[python]',
    'pymdown-extensions',
    'ruff',
]

[project.urls]
Documentation = "https://allenneuraldynamics.github.io/Aind.Behavior.VrForaging.Curricula/"
Repository = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.Curricula/"
Issues = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.Curricula/issues"
Changelog = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.Curricula/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,uv.lock'
ignore-words-list = 'nd'

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --cov=src --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.scripts]
curriculum = "aind_behavior_vr_foraging_curricula.cli:main"